k8s/coma/apps/coder/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: coder
  namespace: coder
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
spec:
  rules:
    - host: "coder.artichoke.cc"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: coder
                port:
                  number: 80
    - host: "*.coder.artichoke.cc"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: coder
                port:
                  number: 80
  tls:
    - hosts:
        - "coder.artichoke.cc"
        - "*.coder.artichoke.cc"
      secretName: artichokecc-cert
